chore(security): Disable postinstall scripts from 3rd party libs on yarn install

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.9.4.cjs
+
+# Disable postinstall scripts from 3rd parties. In 2025, libraries really
+# shouldn't need this, and if they do we should evaulate them one-by-one.
+enableScripts: false
