fix: restore lint on stage

--- a/package.json
+++ b/package.json
@@ -297,6 +297,7 @@
       "yarn format --parser markdown"
     ],
     "*.@(js|jsx|ts|tsx)": [
+      "yarn lint",
       "yarn format"
     ]
   },
