feat(unleash): Add SSR support to feature flags

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "format": "yarn prettier --write",
     "jest": "node_modules/.bin/jest --config jest.config.js",
     "jest:debug": "node --inspect node_modules/.bin/jest --runInBand",
-    "lint": "yarn biome lint --no-errors-on-unmatched",
+    "lint": "yarn biome lint --no-errors-on-unmatched --fix",
     "local-palette-dev": "./scripts/yalc-link-local-palette",
     "local-palette-dev:stop": "./scripts/yalc-unlink-local-palette",
     "open-consent-modal": "open http://localhost:5000?otreset=false&otpreview=true&otgeo=gb",
@@ -228,6 +228,7 @@
     "@types/jest": "27.0.2",
     "@types/jwt-decode": "2.2.0",
     "@types/loadable__component": "5.13.1",
+    "@types/loadable__webpack-plugin": "^5.15.1",
     "@types/lodash": "4.14.111",
     "@types/luxon": "^3.2.0",
     "@types/memoize-one": "3.1.1",
@@ -252,6 +253,7 @@
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/testing-library__react": "^10.2.0",
     "@types/underscore.string": "0.0.32",
+    "@types/webpack-node-externals": "^3.0.4",
     "@types/yup": "^0.29.13",
     "chai": "4.0.0",
     "chai-passport-strategy": "^3.0.0",
