--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
   },
   "devDependencies": {
     "@artaio/arta-browser": "^2.16.1",
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.3.5",
     "@graphql-inspector/core": "1.14.0",
     "@graphql-tools/jest-transform": "^2.0.0",
     "@loadable/webpack-plugin": "5.15.2",
