--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,9 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.5/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!**/src/__generated__/**/*"]
+    "ignore": ["src/__generated__/**/*"]
   },
   "formatter": {
     "enabled": true,
@@ -15,9 +15,9 @@
     "lineWidth": 80,
     "attributePosition": "auto",
     "bracketSpacing": true,
-    "includes": ["**", "!**/__generated__", "!**/hokusai/**/*.yml"]
+    "ignore": ["**/__generated__", "hokusai/*.yml"]
   },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
     "rules": {
@@ -32,8 +32,7 @@
         "noForEach": "off",
         "noUselessFragments": "off",
         "useLiteralKeys": "off",
-        "useOptionalChain": "off",
-        "noArguments": "off"
+        "useOptionalChain": "off"
       },
       "performance": {
         "noAccumulatingSpread": "off",
@@ -43,28 +42,10 @@
         "noDangerouslySetInnerHtml": "off"
       },
       "style": {
+        "noArguments": "off",
         "noNonNullAssertion": "off",
         "noUselessElse": "off",
-        "useNodejsImportProtocol": "off",
-        "noRestrictedImports": {
-          "level": "error",
-          "options": {
-            "paths": {
-              "superagent": "Please use native fetch instead.",
-              "sharify": "Please use getENV instead.",
-              "unstated": "Please just use React state.",
-              "react-waypoint": "Please use `useIntersectionObserver`",
-              "relay-runtime": {
-                "importNames": ["graphql"],
-                "message": "Please import `graphql` from `react-relay`."
-              },
-              "@unleash/proxy-client-react": {
-                "importNames": ["useFlag", "useVariant"],
-                "message": "Please import useFlag from `System/FeatureFlags/useFlag.ts` and useVariant from `System/FeatureFlags/useVariant.ts` instead."
-              }
-            }
-          }
-        }
+        "useNodejsImportProtocol": "off"
       },
       "suspicious": {
         "noArrayIndexKey": "off",
@@ -73,7 +54,7 @@
         "noImplicitAnyLet": "off"
       }
     },
-    "includes": ["**", "!**/src/__generated__/**/*"]
+    "ignore": ["src/__generated__/**/*"]
   },
   "javascript": {
     "formatter": {
@@ -89,32 +70,14 @@
     }
   },
   "overrides": [
-    { "includes": ["**/*.cy.js", "**/*.cy.ts"], "linter": { "rules": {} } },
+    { "include": ["*.cy.js", "*.cy.ts"], "linter": { "rules": {} } },
     {
-      "includes": ["**/webpack/**/*"],
+      "include": ["webpack/**/*"],
       "linter": { "rules": { "suspicious": { "noConsole": "off" } } }
     },
     {
-      "includes": [
-        "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*.jest.ts",
-        "**/*.jest.tsx"
-      ],
+      "include": ["*.test.ts", "*.test.tsx", "*.jest.ts", "**/*.jest.tsx"],
       "linter": { "rules": { "style": { "noNonNullAssertion": "off" } } }
-    },
-    {
-      "includes": [
-        "**/System/FeatureFlags/useFlag.ts",
-        "**/System/FeatureFlags/useVariant.ts"
-      ],
-      "linter": { 
-        "rules": { 
-          "style": { 
-            "noRestrictedImports": "off" 
-          } 
-        } 
-      }
     }
   ]
 }
