fire toggleHeader event when user clicks on artist highlights

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,5 @@ METAPHYSICS_ENDPOINT=http://host.docker.internal:5001
 NODE_ENV=development
 PORT=4000
 APP_URL=http://localhost:4000
+
+SHOW_ANALYTICS_CALLS=true
