--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@artsy/icons": "3.63.0",
     "@artsy/img": "1.1.0",
     "@artsy/multienv": "^1.2.0",
-    "@artsy/palette": "45.6.0",
+    "@artsy/palette": "file:.yalc/@artsy/palette",
     "@artsy/palette-charts": "44.6.0",
     "@artsy/palette-tokens": "7.2.0",
     "@artsy/react-html-parser": "^3.0.2",
