chore: upgrade storybook packages

--- a/package.json
+++ b/package.json
@@ -205,10 +205,11 @@
     "@rsbuild/plugin-assets-retry": "^1.1.0",
     "@rsbuild/plugin-node-polyfill": "^1.2.0",
     "@rsbuild/plugin-react": "^1.1.0",
-    "@storybook/addon-actions": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/react": "^8.4.7",
+    "@storybook/addon-actions": "^8.6.15",
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/addon-links": "^8.6.15",
+    "@storybook/react": "^8.6.15",
+    "@storybook/test": "^8.6.15",
     "@swc/core": "^1.10.11",
     "@swc/jest": "^0.2.37",
     "@swc/plugin-loadable-components": "^5.0.4",
