--- a/hokusai/development.yml
+++ b/hokusai/development.yml
@@ -2,7 +2,9 @@
 version: "3.8"
 services:
   force:
-{% include 'templates/docker-compose-service-dev.yml.j2' %}
+    build:
+      context: ../
+      dockerfile: dev.Dockerfile
     env_file:
       - ../.env.shared
       - ../.env.development
